fix horizontal scrolling in chromium and header aspect ratio

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,6 +41,7 @@ body {
   color: var(--fg);
   transition: all $transitionDuration;
   margin: 0;
+  overflow-x: hidden;
   font-family: "Nunito Sans", sans-serif;
 }
 
